- 
    
Bug
 - 
    Resolution: Done
 - 
    
P3: Somewhat important
 - 
    Qt Creator 4.4.0-beta1
 - 
    None
 
- 
        ecd8fd1198fe174da2e6abe05f97422dba94a5ed
 
Steps to reproduce:
- open the test project (mixed_atp) used inside the plugin unit tests
 - expand the Quick Tests node
 - go through all named test cases and remove/comment out the name property to make them unnamed
 
Current result:
- if the qml file is not listed inside the project file (which is legit for Quick tests) it won't get moved to the unnamed Quick tests
 
Note: Rescan helps.