src/plugins/autotest/testcodeparser.cpp
@@ -199,7 +199,7 @@ static bool parsingHasFailed;
 
 /****** threaded parsing stuff *******/
 
-void TestCodeParser::onDocumentUpdated(const QString &fileName)
+void TestCodeParser::onDocumentUpdated(const QString &fileName, bool isQmlFile)
 {
     if (m_codeModelParsing || m_fullUpdatePostponed)
         return;
@@ -207,7 +207,8 @@ void TestCodeParser::onDocumentUpdated(const QString &fileName)
     Project *project = SessionManager::startupProject();
     if (!project)
         return;
-    if (!SessionManager::projectContainsFile(project, Utils::FileName::fromString(fileName)))
+    // Quick tests: qml files aren't necessarily listed inside project files
+    if (!isQmlFile && !SessionManager::projectContainsFile(project, Utils::FileName::fromString(fileName)))
         return;
 
     scanForTests(QStringList(fileName));
@@ -222,7 +223,7 @@ void TestCodeParser::onQmlDocumentUpdated(const QmlJS::Document::Ptr &document)
 {
     const QString fileName = document->fileName();
     if (!fileName.endsWith(".qbs"))
-        onDocumentUpdated(fileName);
+        onDocumentUpdated(fileName, true);
 }
 
 void TestCodeParser::onStartupProjectChanged(Project *project)
